compile-temp/judge-309f233f-7b02-4011-8733-404f6d0deda74d446a95-868a-4756-b01a-36c477a69f78_Main.java/testcase_04dc707e-16f0-4610-a139-1ea19536896d/error.txt
Waiting for mount files
Mount complete: 0s
Compiling Java source: Main.java
/sandbox/Main.java:1: error: illegal character: '\'
import java.util.Scanner;\n public class Solution { public static void main(String[] args) { Scanner sc = new Scanner(System.in); int n = sc.nextInt(); int m = sc.nextInt(); int sum = n + m; System.out.print(sum); sc.close(); } }
                         ^
1 error
COMPILATION_ERROR
